samples/_failures_safe/1761074366_8341da_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_644af25e.c: In function ‘main’:
./samples/SAFE/__tmp_644af25e.c:160:5: error: expected expression at end of input
  160 |     if (ctx == NULL)
      |     ^~
./samples/SAFE/__tmp_644af25e.c:160:5: error: expected declaration or statement at end of input
